Address CRM review feedback
